# frakle

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DEBUG.md  DEPLOY.txt  QEMU_TEST.md  README-DEPLOY.md  README.md  game-design-doc.md  gen_cn_font.sh  rules.md  run_qemu.sh  rust-toolchain.toml  tech-stack.md
.cargo/: config.toml
esp/: NvVars
esp/EFI/BOOT/: BOOTX64.EFI
esp/EFI/Farkle/: Farkle.efi
game_test/: Cargo.toml
game_test/src/: main.rs
scripts/: build.sh  deploy-usb.sh  gen_cn_font.sh  quick-deploy.sh  run-qemu-gdb.sh  run-qemu.sh  verify.sh  view-log.sh
src/: background.rs  effects.rs  framebuffer.rs  game.rs  input.rs  lib.rs  logger.rs  main.rs  sound.rs
src/ui/: cn_font.rs  dice.rs  lang.rs  layout.rs  mod.rs
