[package]
name = "frakle"
version = "0.1.0"
edition = "2021"

[dependencies]
uefi = { version = "0.28", features = ["alloc"] }
uefi-services = { version = "0.25", default-features = false, features = ["logger"] }
embedded-graphics = "0.8"
spin = "0.9"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1
